@@ -71,6 +71,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   because it is part of a blocked range.
 * (bug 3973) Use a separate message for the email content when an account is 
   created by another user
+* dumpTextPass.php can spawn fetchText.php as a subprocess, which should restart
+  cleanly if database connections fail unpleasantly.
+
 
 === Bug fixes in 1.12 ===
 
